--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,8 +1,6 @@
-apply plugin: 'com.android.application'
-
-apply plugin: 'kotlin-android'
-
-apply plugin: 'kotlin-android-extensions'
+apply plugin: "com.android.application"
+apply plugin: "kotlin-android"
+apply plugin: "kotlin-android-extensions"
 
 android {
     compileSdkVersion 26
@@ -17,22 +15,40 @@ android {
     buildTypes {
         release {
             minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
         }
     }
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    final GOOGLE_VERSION = "26.1.0"
+    final RETROFIT_VERSION = "2.3.0"
+    final OKHTTP_VERSION = "3.9.1"
+    final RX_VERSION = "2.0.2"
+
+    implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation"org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
-    implementation 'com.android.support:appcompat-v7:26.1.0'
-    implementation 'com.android.support:cardview-v7:26.1.0'
-    implementation 'com.android.support:recyclerview-v7:26.1.0'
-    implementation 'com.android.support:design:26.1.0'
-    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
-    implementation 'com.android.support:support-v4:26.1.0'
-    implementation 'com.android.support:support-vector-drawable:26.1.0'
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:1.0.1'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
+    // Google support libraries
+    implementation "com.android.support:appcompat-v7:$GOOGLE_VERSION"
+    implementation "com.android.support:cardview-v7:$GOOGLE_VERSION"
+    implementation "com.android.support:recyclerview-v7:$GOOGLE_VERSION"
+    implementation "com.android.support:design:$GOOGLE_VERSION"
+    implementation "com.android.support.constraint:constraint-layout:1.0.2"
+    implementation "com.android.support:support-v4:$GOOGLE_VERSION"
+    implementation "com.android.support:support-vector-drawable:$GOOGLE_VERSION"
+    // retrofit stack
+    compile "com.squareup.retrofit2:retrofit:$RETROFIT_VERSION"
+    compile "com.squareup.retrofit2:converter-gson:$RETROFIT_VERSION"
+    compile "com.squareup.retrofit2:adapter-rxjava2:$RETROFIT_VERSION"
+    compile "com.squareup.okhttp3:okhttp:$OKHTTP_VERSION"
+    compile "com.squareup.okhttp3:logging-interceptor:$OKHTTP_VERSION"
+    compile "com.squareup.okhttp3:okhttp-urlconnection:$OKHTTP_VERSION"
+    compile "com.google.code.gson:gson:2.8.2"
+    //rx
+    compile "io.reactivex.rxjava2:rxjava:$RX_VERSION"
+    compile "io.reactivex.rxjava2:rxandroid:$RX_VERSION"
+    // testing
+    testImplementation "junit:junit:4.12"
+    androidTestImplementation "com.android.support.test:runner:1.0.1"
+    androidTestImplementation "com.android.support.test.espresso:espresso-core:3.0.1"
 }
