--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,11 +3,11 @@ apply plugin: "kotlin-android"
 apply plugin: "kotlin-android-extensions"
 
 android {
-    compileSdkVersion 26
+    compileSdkVersion 27
     defaultConfig {
         applicationId "com.shikherverma.todayontv"
         minSdkVersion 17
-        targetSdkVersion 26
+        targetSdkVersion 27
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -21,10 +21,11 @@ android {
 }
 
 dependencies {
-    final GOOGLE_VERSION = "26.1.0"
+    final GOOGLE_VERSION = "27.0.2"
     final RETROFIT_VERSION = "2.3.0"
     final OKHTTP_VERSION = "3.9.1"
     final RX_VERSION = "2.0.2"
+    final GLIDE_VERSION = "4.6.1"
 
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation"org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
@@ -37,16 +38,19 @@ dependencies {
     implementation "com.android.support:support-v4:$GOOGLE_VERSION"
     implementation "com.android.support:support-vector-drawable:$GOOGLE_VERSION"
     // retrofit stack
-    compile "com.squareup.retrofit2:retrofit:$RETROFIT_VERSION"
-    compile "com.squareup.retrofit2:converter-gson:$RETROFIT_VERSION"
-    compile "com.squareup.retrofit2:adapter-rxjava2:$RETROFIT_VERSION"
-    compile "com.squareup.okhttp3:okhttp:$OKHTTP_VERSION"
-    compile "com.squareup.okhttp3:logging-interceptor:$OKHTTP_VERSION"
-    compile "com.squareup.okhttp3:okhttp-urlconnection:$OKHTTP_VERSION"
-    compile "com.google.code.gson:gson:2.8.2"
+    implementation "com.squareup.retrofit2:retrofit:$RETROFIT_VERSION"
+    implementation "com.squareup.retrofit2:converter-gson:$RETROFIT_VERSION"
+    implementation "com.squareup.retrofit2:adapter-rxjava2:$RETROFIT_VERSION"
+    implementation "com.squareup.okhttp3:okhttp:$OKHTTP_VERSION"
+    implementation "com.squareup.okhttp3:logging-interceptor:$OKHTTP_VERSION"
+    implementation "com.squareup.okhttp3:okhttp-urlconnection:$OKHTTP_VERSION"
+    implementation "com.google.code.gson:gson:2.8.2"
     //rx
-    compile "io.reactivex.rxjava2:rxjava:$RX_VERSION"
-    compile "io.reactivex.rxjava2:rxandroid:$RX_VERSION"
+    implementation "io.reactivex.rxjava2:rxjava:$RX_VERSION"
+    implementation "io.reactivex.rxjava2:rxandroid:$RX_VERSION"
+    // glide
+    implementation "com.github.bumptech.glide:glide:$GLIDE_VERSION"
+    annotationProcessor "com.github.bumptech.glide:compiler:$GLIDE_VERSION"
     // testing
     testImplementation "junit:junit:4.12"
     androidTestImplementation "com.android.support.test:runner:1.0.1"
