--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 apply plugin: "com.android.application"
 apply plugin: "kotlin-android"
 apply plugin: "kotlin-android-extensions"
+apply plugin: 'kotlin-kapt'
 
 android {
     compileSdkVersion 27
@@ -18,6 +19,9 @@ android {
             proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
         }
     }
+    dataBinding {
+        enabled = true
+    }
 }
 
 dependencies {
@@ -28,7 +32,8 @@ dependencies {
     final GLIDE_VERSION = "4.6.1"
 
     implementation fileTree(dir: "libs", include: ["*.jar"])
-    implementation"org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+    kapt "com.android.databinding:compiler:3.0.1"
     // Google support libraries
     implementation "com.android.support:appcompat-v7:$GOOGLE_VERSION"
     implementation "com.android.support:cardview-v7:$GOOGLE_VERSION"
