--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,8 @@ dependencies {
     final OKHTTP_VERSION = "3.9.1"
     final RX_VERSION = "2.0.2"
     final GLIDE_VERSION = "4.6.1"
+    final MOCKITO_VERSION = "2.12.0"
+    final ESPRESSO_VERSION = "3.0.1"
 
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
@@ -59,6 +61,9 @@ dependencies {
     annotationProcessor "com.github.bumptech.glide:compiler:$GLIDE_VERSION"
     // testing
     testImplementation "junit:junit:4.12"
+    testImplementation "org.mockito:mockito-core:$MOCKITO_VERSION"
+    androidTestImplementation "org.mockito:mockito-android:$MOCKITO_VERSION"
     androidTestImplementation "com.android.support.test:runner:1.0.1"
-    androidTestImplementation "com.android.support.test.espresso:espresso-core:3.0.1"
+    androidTestImplementation "com.android.support.test.espresso:espresso-core:$ESPRESSO_VERSION"
+    androidTestImplementation "com.android.support.test.espresso:espresso-intents:$ESPRESSO_VERSION"
 }
